fix cart blocks jumping

--- a/src/components/CartPage/CartPage.scss
+++ b/src/components/CartPage/CartPage.scss
@@ -19,6 +19,10 @@
     }
   }
 
+  &__list {
+    width: 100%;
+  }
+
   &__list__item {
     margin-bottom: 16px;
   }
